--- a/Algoritmo/Algoritmo.csproj
+++ b/Algoritmo/Algoritmo.csproj
@@ -43,11 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsignacionPP.cs" />
+    <Compile Include="Proceso.cs" />
     <Compile Include="GRASP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reader.cs" />
+    <Compile Include="Lector.cs" />
+    <Compile Include="Trabajador.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
